[package]
name = "laser-range-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
fugit = "0.3.6"
nb = "1.0.0"
heapless = "0.7.16"

[dev-dependencies]
linux-embedded-hal = "0.3.2"